--- a/Final Assignment.ipynb
+++ b/Final Assignment.ipynb
@@ -266,33 +266,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       Date      Open      High       Low     Close  \\\n",
-      "0 2010-06-29 00:00:00-04:00  1.266667  1.666667  1.169333  1.592667   \n",
-      "1 2010-06-30 00:00:00-04:00  1.719333  2.028000  1.553333  1.588667   \n",
-      "2 2010-07-01 00:00:00-04:00  1.666667  1.728000  1.351333  1.464000   \n",
-      "3 2010-07-02 00:00:00-04:00  1.533333  1.540000  1.247333  1.280000   \n",
-      "4 2010-07-06 00:00:00-04:00  1.333333  1.333333  1.055333  1.074000   \n",
-      "\n",
-      "      Volume  Dividends  Stock Splits  \n",
-      "0  281494500        0.0           0.0  \n",
-      "1  257806500        0.0           0.0  \n",
-      "2  123282000        0.0           0.0  \n",
-      "3   77097000        0.0           0.0  \n",
-      "4  103003500        0.0           0.0  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2010-06-29 00:00:00-04:00</td>\n",
+       "      <td>1.266667</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>1.169333</td>\n",
+       "      <td>1.592667</td>\n",
+       "      <td>281494500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-06-30 00:00:00-04:00</td>\n",
+       "      <td>1.719333</td>\n",
+       "      <td>2.028000</td>\n",
+       "      <td>1.553333</td>\n",
+       "      <td>1.588667</td>\n",
+       "      <td>257806500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2010-07-01 00:00:00-04:00</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>1.728000</td>\n",
+       "      <td>1.351333</td>\n",
+       "      <td>1.464000</td>\n",
+       "      <td>123282000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-07-02 00:00:00-04:00</td>\n",
+       "      <td>1.533333</td>\n",
+       "      <td>1.540000</td>\n",
+       "      <td>1.247333</td>\n",
+       "      <td>1.280000</td>\n",
+       "      <td>77097000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-07-06 00:00:00-04:00</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>1.055333</td>\n",
+       "      <td>1.074000</td>\n",
+       "      <td>103003500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                      Date      Open      High       Low     Close  \\\n",
+       "0      0 2010-06-29 00:00:00-04:00  1.266667  1.666667  1.169333  1.592667   \n",
+       "1      1 2010-06-30 00:00:00-04:00  1.719333  2.028000  1.553333  1.588667   \n",
+       "2      2 2010-07-01 00:00:00-04:00  1.666667  1.728000  1.351333  1.464000   \n",
+       "3      3 2010-07-02 00:00:00-04:00  1.533333  1.540000  1.247333  1.280000   \n",
+       "4      4 2010-07-06 00:00:00-04:00  1.333333  1.333333  1.055333  1.074000   \n",
+       "\n",
+       "      Volume  Dividends  Stock Splits  \n",
+       "0  281494500        0.0           0.0  \n",
+       "1  257806500        0.0           0.0  \n",
+       "2  123282000        0.0           0.0  \n",
+       "3   77097000        0.0           0.0  \n",
+       "4  103003500        0.0           0.0  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "tesla_data.reset_index(inplace=True)\n",
     "\n",
-    "print(tesla_data.head())"
+    "tesla_data.head()"
    ]
   },
   {
@@ -450,24 +548,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Date Revenue\n",
-      "48  2010-09-30     $31\n",
-      "49  2010-06-30     $28\n",
-      "50  2010-03-31     $21\n",
-      "52  2009-09-30     $46\n",
-      "53  2009-06-30     $27\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>2010-09-30</td>\n",
+       "      <td>$31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>2010-06-30</td>\n",
+       "      <td>$28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>2010-03-31</td>\n",
+       "      <td>$21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>2009-09-30</td>\n",
+       "      <td>$46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>2009-06-30</td>\n",
+       "      <td>$27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Revenue\n",
+       "48  2010-09-30     $31\n",
+       "49  2010-06-30     $28\n",
+       "50  2010-03-31     $21\n",
+       "52  2009-09-30     $46\n",
+       "53  2009-06-30     $27"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(tesla_revenue.tail(5))"
+    "tesla_revenue.tail(5)"
    ]
   },
   {
@@ -518,33 +672,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       Date      Open      High       Low     Close    Volume  \\\n",
-      "0 2002-02-13 00:00:00-05:00  1.620129  1.693350  1.603296  1.691667  76216000   \n",
-      "1 2002-02-14 00:00:00-05:00  1.712707  1.716074  1.670626  1.683250  11021600   \n",
-      "2 2002-02-15 00:00:00-05:00  1.683250  1.687458  1.658002  1.674834   8389600   \n",
-      "3 2002-02-19 00:00:00-05:00  1.666418  1.666418  1.578047  1.607504   7410400   \n",
-      "4 2002-02-20 00:00:00-05:00  1.615920  1.662209  1.603296  1.662209   6892800   \n",
-      "\n",
-      "   Dividends  Stock Splits  \n",
-      "0        0.0           0.0  \n",
-      "1        0.0           0.0  \n",
-      "2        0.0           0.0  \n",
-      "3        0.0           0.0  \n",
-      "4        0.0           0.0  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2002-02-13 00:00:00-05:00</td>\n",
+       "      <td>1.620129</td>\n",
+       "      <td>1.693350</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.691667</td>\n",
+       "      <td>76216000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2002-02-14 00:00:00-05:00</td>\n",
+       "      <td>1.712707</td>\n",
+       "      <td>1.716074</td>\n",
+       "      <td>1.670626</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>11021600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2002-02-15 00:00:00-05:00</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>1.687458</td>\n",
+       "      <td>1.658002</td>\n",
+       "      <td>1.674834</td>\n",
+       "      <td>8389600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2002-02-19 00:00:00-05:00</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.578047</td>\n",
+       "      <td>1.607504</td>\n",
+       "      <td>7410400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2002-02-20 00:00:00-05:00</td>\n",
+       "      <td>1.615920</td>\n",
+       "      <td>1.662209</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.662209</td>\n",
+       "      <td>6892800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                      Date      Open      High       Low     Close  \\\n",
+       "0      0 2002-02-13 00:00:00-05:00  1.620129  1.693350  1.603296  1.691667   \n",
+       "1      1 2002-02-14 00:00:00-05:00  1.712707  1.716074  1.670626  1.683250   \n",
+       "2      2 2002-02-15 00:00:00-05:00  1.683250  1.687458  1.658002  1.674834   \n",
+       "3      3 2002-02-19 00:00:00-05:00  1.666418  1.666418  1.578047  1.607504   \n",
+       "4      4 2002-02-20 00:00:00-05:00  1.615920  1.662209  1.603296  1.662209   \n",
+       "\n",
+       "     Volume  Dividends  Stock Splits  \n",
+       "0  76216000        0.0           0.0  \n",
+       "1  11021600        0.0           0.0  \n",
+       "2   8389600        0.0           0.0  \n",
+       "3   7410400        0.0           0.0  \n",
+       "4   6892800        0.0           0.0  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "gme_data.reset_index(inplace=True)\n",
     "\n",
-    "print(gme_data.head())"
+    "gme_data.head()"
    ]
   },
   {
@@ -662,24 +914,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Date Revenue\n",
-      "57  2006-01-31    1667\n",
-      "58  2005-10-31     534\n",
-      "59  2005-07-31     416\n",
-      "60  2005-04-30     475\n",
-      "61  2005-01-31     709\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>2006-01-31</td>\n",
+       "      <td>1667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>2005-10-31</td>\n",
+       "      <td>534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>2005-07-31</td>\n",
+       "      <td>416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>2005-04-30</td>\n",
+       "      <td>475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2005-01-31</td>\n",
+       "      <td>709</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Revenue\n",
+       "57  2006-01-31    1667\n",
+       "58  2005-10-31     534\n",
+       "59  2005-07-31     416\n",
+       "60  2005-04-30     475\n",
+       "61  2005-01-31     709"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gme_revenue.tail(5))"
+    "gme_revenue.tail(5)"
    ]
   },
   {
